# cub3d

./: .cub  CMakeLists.txt  Makefile  cub3D  map.cub  map2.cub  map3.cub  Косяки
include/: cub3d.h  cubbster.h  cubbster_colors.h  cubbster_errors.h  cubbster_keycodes.h
includes/: cub3d.h
libft/: Makefile  ft_atoi.c  ft_strtrim.c  libft.h
minilibx/: mlx_new_window.m
parse_src/: check_map_borders.c  making_map.c  parse_utils.c  parsing.c
play_src/: add_sprite_info.c  cast_rays.c  clear_sprites_info.c  collect_coin.c  draw_minimap.c  draw_sprites.c  draw_state.c  get_color.c  get_distance_for_step.c  init_workspace.c  main.c  put_error.c  put_pixel.c  put_sprite_slice.c  put_wall_slice.c  set_hooks_for_drawing.c  set_new_image.c  set_new_window.c  set_ray_info.c  set_start_image.c  update_sprite_info.c
src/: check_map_borders.c  find_player.c  get_next_line.c  get_next_line_utils.c  init_struct.c  main.c  making_map.c  parse_utils.c  parsing.c  sample.c  sample2.c  set_params.c  utils.c
